browse button - tool button으로 변경, 폴더, 파일 선택 가능

--- a/tk-multi-starterapp/resources/dialog.ui
+++ b/tk-multi-starterapp/resources/dialog.ui
@@ -29,7 +29,7 @@
       <string>stackedwidget</string>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="main">
       <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -126,13 +126,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="browse_button">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
+              <widget class="QToolButton" name="toolButton">
                <property name="text">
                 <string>Browse</string>
                </property>
@@ -196,7 +190,7 @@
             <widget class="QLineEdit" name="line_dir_path"/>
            </item>
            <item>
-            <widget class="QPushButton" name="btn_browse">
+            <widget class="QToolButton" name="btn_browse">
              <property name="text">
               <string>Browse</string>
              </property>
